Fix spacing on buttons

--- a/css/reset.css
+++ b/css/reset.css
@@ -45,10 +45,9 @@ table {
 button {
     display: inline-block;
     border: none;
-    padding: 1rem 2rem;
+    padding: 0;
     margin: 0;
     text-decoration: none;
-    background: #0069ed;
     color: #ffffff;
     font-family: sans-serif;
     font-size: 1rem;
